output/qubit_p5_25_124/foundry_validation/F-002_Transparent_proxy_may_expose_an_implemen/forge_stdout_attempt1.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xcD2CD343CFbe284220677C78A08B1648bFa39865". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xcD2CD343CFbe284220677C78A08B1648bFa39865". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:79:55:
   |
79 |     address public constant EXPECTED_IMPLEMENTATION = 0xcd2cd343cfbe284220677c78a08b1648bfa39865;
   |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

